--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^8.1.3",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
