--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "coverage": "NODE_ENV=test nyc --include src --all -r text -r lcov -r text --require babel-core/register mocha "
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "buffer": "^6.0.3",
+    "immer": "^9.0.21",
+    "path": "^0.12.7",
+    "process": "^0.11.10",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^8.1.3",
+    "react-redux": "^7.2.9",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "babel-cli": "^6.7.7",
