--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.5",
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.0",
