--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "@babel/register": "^7.25.9",
+    "@testing-library/react": "^12.1.5",
     "babel-cli": "^6.7.7",
-    "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-__coverage__": "^0.111111.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
