--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/register": "^7.25.9",
     "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^8.0.1",
     "babel-cli": "^6.7.7",
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
@@ -48,16 +49,21 @@
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
+    "jsdom": "^26.0.0",
     "mocha": "^2.4.5",
     "nyc": "^6.4.4",
+    "proxyquire": "^2.1.3",
+    "redux-mock-store": "^1.5.5",
+    "sinon": "^20.0.0",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^1.14.1",
     "webpack-hot-middleware": "^2.10.0"
   },
   "nyc": {
-    "exclude": [
-      "build"
+    "all": true,
+    "include": [
+      "src/**/*.js"
     ]
   },
   "babel": {
