--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "immer": "^9.0.21",
     "path": "^0.12.7",
     "process": "^0.11.10",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^7.2.9",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
     "@babel/register": "^7.25.9",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^12.1.5",
     "@testing-library/react-hooks": "^8.0.1",
     "babel-cli": "^6.7.7",
@@ -49,6 +50,7 @@
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-react": "^5.2.2",
+    "jest": "^29.7.0",
     "jsdom": "^26.0.0",
     "mocha": "^2.4.5",
     "nyc": "^6.4.4",
